CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(helloworld)

IF(DEFINED ENV{SWIRLY_HOME})
  MESSAGE("SWIRLY_HOME is set to $ENV{SWIRLY_HOME}")
ELSE()
  MESSAGE(FATAL_ERROR "SWIRLY_HOME is not set")
ENDIF()

SET(COMMON_WARN "-Wall -Werror -Wextra -Wstrict-aliasing=2 -Wno-unused-parameter")
SET(COMMON_FLAGS "-fstrict-aliasing -fvisibility=hidden")
SET(CMAKE_CXX_FLAGS "-std=c++14 ${COMMON_FLAGS} ${COMMON_WARN} -fno-rtti")

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "$ENV{SWIRLY_HOME}/etc")

FIND_PACKAGE(Swirly REQUIRED)

INCLUDE_DIRECTORIES(${SWIRLY_INCLUDE_DIRS})

ADD_EXECUTABLE(helloworld Main.cpp)
TARGET_LINK_LIBRARIES(helloworld ${SWIRLY_ASH_LIBRARY})
