FILE(GLOB ash_SOURCES "*.cpp")

ADD_LIBRARY(ash_shared SHARED ${ash_SOURCES})
SET_TARGET_PROPERTIES(ash_shared PROPERTIES OUTPUT_NAME swirly_ash)
TARGET_LINK_LIBRARIES(ash_shared)

ADD_LIBRARY(ash_static STATIC ${ash_SOURCES})
SET_TARGET_PROPERTIES(ash_static PROPERTIES OUTPUT_NAME swirly_ash)
TARGET_LINK_LIBRARIES(ash_static)

ADD_LIBRARY(ash_pic STATIC ${ash_SOURCES})
SET_TARGET_PROPERTIES(ash_pic PROPERTIES OUTPUT_NAME swirly_ash_pic)
SET_TARGET_PROPERTIES(ash_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(ash_pic)

INSTALL(TARGETS ash_shared DESTINATION lib)
INSTALL(TARGETS ash_static DESTINATION lib)
