FILE(GLOB ash_SOURCES "*.cpp")

ADD_LIBRARY(ash_shared SHARED ${ash_SOURCES})
SET_TARGET_PROPERTIES(ash_shared PROPERTIES OUTPUT_NAME swirly_ash)
TARGET_LINK_LIBRARIES(ash_shared)
INSTALL(TARGETS ash_shared DESTINATION lib)

IF(ENABLE_STATIC_LIBS)
  ADD_LIBRARY(ash_static STATIC ${ash_SOURCES})
  SET_TARGET_PROPERTIES(ash_static PROPERTIES OUTPUT_NAME swirly_ash)
  TARGET_LINK_LIBRARIES(ash_static)
  INSTALL(TARGETS ash_static DESTINATION lib)
ENDIF()
