INCLUDE(AddFileDependencies)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

ADD_CUSTOM_COMMAND(
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/rest.rl
  COMMAND ragel ${CMAKE_CURRENT_SOURCE_DIR}/rest.rl
    -o ${CMAKE_CURRENT_BINARY_DIR}/rest.c
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/rest.c
)

SET(dbr_SOURCES
  core.c
  ctx.c
  model.c
  ${CMAKE_CURRENT_BINARY_DIR}/rest.c
  string.c
  util.c
)

ADD_LIBRARY(dbr_shared SHARED ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_shared PROPERTIES OUTPUT_NAME dbr)
TARGET_LINK_LIBRARIES(dbr_shared fig_pic m)

ADD_LIBRARY(dbr_static STATIC ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_static PROPERTIES OUTPUT_NAME dbr)
TARGET_LINK_LIBRARIES(dbr_static fig_static m)

ADD_LIBRARY(dbr_pic STATIC ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(dbr_pic fig_pic m)

SET(shell_SOURCES
  shell.c
)
ADD_EXECUTABLE(dbr_shell ${shell_SOURCES})
TARGET_LINK_LIBRARIES(dbr_shell dbr_static m)

INSTALL(TARGETS dbr_shared DESTINATION lib)
INSTALL(TARGETS dbr_static DESTINATION lib)
INSTALL(TARGETS dbr_shell DESTINATION bin)
