INCLUDE(AddFileDependencies)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

FILE(GLOB dbr_SOURCES "*.c")

ADD_LIBRARY(dbr_shared SHARED ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_shared PROPERTIES OUTPUT_NAME dbr)
TARGET_LINK_LIBRARIES(dbr_shared fig_pic m)

ADD_LIBRARY(dbr_static STATIC ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_static PROPERTIES OUTPUT_NAME dbr)
TARGET_LINK_LIBRARIES(dbr_static fig_static m)

ADD_LIBRARY(dbr_pic STATIC ${dbr_SOURCES})
SET_TARGET_PROPERTIES(dbr_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(dbr_pic fig_pic m)

INSTALL(TARGETS dbr_shared DESTINATION lib)
INSTALL(TARGETS dbr_static DESTINATION lib)
