INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${LIBUUID_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES("${ZEROMQ_INCLUDE_DIRS}")

FILE(GLOB dbrd_SOURCES "*.c")

ADD_EXECUTABLE(dbrd ${dbrd_SOURCES})
TARGET_LINK_LIBRARIES(dbrd fir_static pthread)
INSTALL(TARGETS dbrd DESTINATION bin)
