IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  SET(CMAKE_C_FLAGS "-std=c11 -Wall -Werror -fstrict-aliasing")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  SET(CMAKE_C_FLAGS "-std=c11 -Wall -Werror -fstrict-aliasing")
ENDIF()

FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")

FILE(GLOB dbrpy_SOURCES dbrpy.c)

ADD_LIBRARY(dbrpy MODULE ${dbrpy_SOURCES})
SET_TARGET_PROPERTIES(dbrpy PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(dbrpy elm_shared ${PYTHON_LIBRARIES})

INSTALL(TARGETS dbrpy DESTINATION lib)
