# Strict aliasing disabled.
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  SET(CMAKE_C_FLAGS "-std=c11 -Wall -Werror -Wno-strict-aliasing")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  SET(CMAKE_C_FLAGS "-std=c11 -Wall -Werror -Wno-unused-function -Wno-strict-aliasing")
ENDIF()

FIND_PACKAGE(PythonLibs REQUIRED)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${PYTHON_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES("${ZEROMQ_INCLUDE_DIRS}")

FIND_PROGRAM(CYTHON cython)
ADD_CUSTOM_COMMAND(
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/dbrpy.h
          ${CMAKE_CURRENT_SOURCE_DIR}/dbrpy.pyx
          ${CMAKE_CURRENT_SOURCE_DIR}/dbr.pxd
          ${CMAKE_CURRENT_SOURCE_DIR}/zmq.pxd
  COMMAND ${CYTHON} -Wextra ${CMAKE_CURRENT_SOURCE_DIR}/dbrpy.pyx
          -o ${CMAKE_CURRENT_BINARY_DIR}/dbrpy.c
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/dbrpy.c
  )

SET(dbrpy_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/dbrpy.c)

ADD_LIBRARY(dbrpy MODULE ${dbrpy_SOURCES})
SET_TARGET_PROPERTIES(dbrpy PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(dbrpy fig_shared ${PYTHON_LIBRARIES})

INSTALL(TARGETS dbrpy DESTINATION lib)
INSTALL(PROGRAMS dbr_shell DESTINATION bin)
