FILE(GLOB elm_SOURCES "*.cpp")

ADD_LIBRARY(elm_shared SHARED ${elm_SOURCES})
SET_TARGET_PROPERTIES(elm_shared PROPERTIES OUTPUT_NAME swirly_elm)
TARGET_LINK_LIBRARIES(elm_shared ash_shared)

ADD_LIBRARY(elm_static STATIC ${elm_SOURCES})
SET_TARGET_PROPERTIES(elm_static PROPERTIES OUTPUT_NAME swirly_elm)
TARGET_LINK_LIBRARIES(elm_static ash_static)

ADD_LIBRARY(elm_pic STATIC ${elm_SOURCES})
SET_TARGET_PROPERTIES(elm_pic PROPERTIES OUTPUT_NAME swirly_elm_pic)
SET_TARGET_PROPERTIES(elm_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(elm_pic ash_pic)

INSTALL(TARGETS elm_shared DESTINATION lib)
INSTALL(TARGETS elm_static DESTINATION lib)
