FILE(GLOB elm_SOURCES "*.cpp")

ADD_LIBRARY(elm_shared SHARED ${elm_SOURCES})
SET_TARGET_PROPERTIES(elm_shared PROPERTIES OUTPUT_NAME swirly_elm)
TARGET_LINK_LIBRARIES(elm_shared ash_shared)

ADD_LIBRARY(elm_static STATIC ${elm_SOURCES})
SET_TARGET_PROPERTIES(elm_static PROPERTIES OUTPUT_NAME swirly_elm)
TARGET_LINK_LIBRARIES(elm_static ash_static)

INSTALL(TARGETS elm_shared DESTINATION lib)
INSTALL(TARGETS elm_static DESTINATION lib)
