INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

ADD_DEFINITIONS(-DDBR_HIDE_API)
ADD_DEFINITIONS(-DSQLITE_THREADSAFE=0)

SET(fig_SOURCES
  sqlite.c
  sqlite3.c
)

ADD_LIBRARY(fig_static STATIC ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_static PROPERTIES OUTPUT_NAME fig)
TARGET_LINK_LIBRARIES(fig_static elm_static dl)

ADD_LIBRARY(fig_pic STATIC ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(fig_pic elm_pic dl)

INSTALL(TARGETS fig_static DESTINATION lib)
