INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${ZEROMQ_INCLUDE_DIRS}")

FILE(GLOB fig_SOURCES "*.c")

ADD_LIBRARY(fig_shared SHARED ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_shared PROPERTIES OUTPUT_NAME dbr_fig)
TARGET_LINK_LIBRARIES(fig_shared elm_shared)

ADD_LIBRARY(fig_static STATIC ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_static PROPERTIES OUTPUT_NAME dbr_fig)
TARGET_LINK_LIBRARIES(fig_static elm_static)

ADD_LIBRARY(fig_pic STATIC ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_pic PROPERTIES OUTPUT_NAME dbr_fig_pic)
SET_TARGET_PROPERTIES(fig_pic PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
TARGET_LINK_LIBRARIES(fig_pic elm_pic)

INSTALL(TARGETS fig_shared DESTINATION lib)
INSTALL(TARGETS fig_static DESTINATION lib)
