FILE(GLOB fig_SOURCES "*.cpp")

ADD_LIBRARY(fig_shared SHARED ${fig_SOURCES})
SET_TARGET_PROPERTIES(fig_shared PROPERTIES OUTPUT_NAME swirly_fig)
TARGET_LINK_LIBRARIES(fig_shared elm_shared)
INSTALL(TARGETS fig_shared DESTINATION lib)

IF(ENABLE_STATIC_LIBS)
  ADD_LIBRARY(fig_static STATIC ${fig_SOURCES})
  SET_TARGET_PROPERTIES(fig_static PROPERTIES OUTPUT_NAME swirly_fig)
  TARGET_LINK_LIBRARIES(fig_static elm_static)
  INSTALL(TARGETS fig_static DESTINATION lib)
ENDIF()
