IF(RAGEL_EXECUTABLE)
  ADD_CUSTOM_COMMAND(
    OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/RestRequest.cpp"
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    COMMAND "${RAGEL_EXECUTABLE}" "${CMAKE_CURRENT_SOURCE_DIR}/RestRequest.rl"
            -o "${CMAKE_CURRENT_SOURCE_DIR}/RestRequest.cpp"
    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/RestRequest.rl")
ENDIF(RAGEL_EXECUTABLE)

FILE(GLOB fir_SOURCES "*.cpp")

ADD_LIBRARY(fir_shared SHARED ${fir_SOURCES})
SET_TARGET_PROPERTIES(fir_shared PROPERTIES OUTPUT_NAME swirly_fir)
TARGET_LINK_LIBRARIES(fir_shared fig_shared)
INSTALL(TARGETS fir_shared DESTINATION lib)

IF(ENABLE_STATIC_LIBS)
  ADD_LIBRARY(fir_static STATIC ${fir_SOURCES})
  SET_TARGET_PROPERTIES(fir_static PROPERTIES OUTPUT_NAME swirly_fir)
  TARGET_LINK_LIBRARIES(fir_static fig_static)
  INSTALL(TARGETS fir_static DESTINATION lib)
ENDIF()
