INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${LIBUUID_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES("${ZEROMQ_INCLUDE_DIRS}")

FILE(GLOB scsh_SOURCES "*.cpp")

ADD_EXECUTABLE(scsh ${scsh_SOURCES})
TARGET_LINK_LIBRARIES(scsh fir_static pthread)
INSTALL(TARGETS scsh DESTINATION bin)
