FILE(GLOB sqlite_SOURCES "*.cpp")

INCLUDE_DIRECTORIES(${SQLITE3_INCLUDE_DIRS})

ADD_LIBRARY(sqlite_static STATIC ${sqlite_SOURCES})
SET_TARGET_PROPERTIES(sqlite_static PROPERTIES OUTPUT_NAME swirly_sqlite)
TARGET_LINK_LIBRARIES(sqlite_static elm_static ${SQLITE3_LIBRARIES})
INSTALL(TARGETS sqlite_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
  ADD_LIBRARY(sqlite_shared SHARED ${sqlite_SOURCES})
  SET_TARGET_PROPERTIES(sqlite_shared PROPERTIES OUTPUT_NAME swirly_sqlite)
  TARGET_LINK_LIBRARIES(sqlite_shared elm_shared ${SQLITE3_LIBRARIES})
  INSTALL(TARGETS sqlite_shared DESTINATION lib)
ENDIF()
