# Mongoose does not compile with strict aliasing.
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-aliasing")

# Use epoll() on Linux.
IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  ADD_DEFINITIONS(-DMG_MGR_EV_MGR=1)
ENDIF()

IF(MG_ENABLE_DEBUG)
  ADD_DEFINITIONS(-DMG_ENABLE_DEBUG)
ELSE()
  ADD_DEFINITIONS(-DMG_DISABLE_STDIO)
ENDIF()

ADD_DEFINITIONS(-DMG_DISABLE_CGI)
ADD_DEFINITIONS(-DMG_DISABLE_COAP)
ADD_DEFINITIONS(-DMG_DISABLE_DAV)
ADD_DEFINITIONS(-DMG_DISABLE_DAV_AUTH)
#ADD_DEFINITIONS(-DMG_DISABLE_DIRECTORY_LISTING)
ADD_DEFINITIONS(-DMG_DISABLE_DNS)
#ADD_DEFINITIONS(-DMG_DISABLE_FILESYSTEM)
ADD_DEFINITIONS(-DMG_DISABLE_HEXDUMP)
#ADD_DEFINITIONS(-DMG_DISABLE_HTTP)
ADD_DEFINITIONS(-DMG_DISABLE_HTTP_DIGEST_AUTH)
#ADD_DEFINITIONS(-DMG_DISABLE_HTTP_KEEP_ALIVE)
ADD_DEFINITIONS(-DMG_DISABLE_HTTP_WEBSOCKET)
ADD_DEFINITIONS(-DMG_DISABLE_JSON_RPC)
ADD_DEFINITIONS(-DMG_DISABLE_MQTT)
ADD_DEFINITIONS(-DMG_DISABLE_PFS)
ADD_DEFINITIONS(-DMG_DISABLE_POPEN)
ADD_DEFINITIONS(-DMG_DISABLE_RESOLVE)
ADD_DEFINITIONS(-DMG_DISABLE_RESOLVER)
#ADD_DEFINITIONS(-DMG_DISABLE_SOCKETPAIR)
#ADD_DEFINITIONS(-DMG_DISABLE_SOCKET_IF)
ADD_DEFINITIONS(-DMG_DISABLE_SSI)
#ADD_DEFINITIONS(-DMG_DISABLE_STDIO)
ADD_DEFINITIONS(-DMG_DISABLE_SYNC_RESOLVER)
ADD_DEFINITIONS(-DMG_DISABLE_WS_RANDOM_MASK)

FILE(GLOB swirlyd_SOURCES "*.cpp")

ADD_EXECUTABLE(swirlyd ${swirlyd_SOURCES} "${PROJECT_SOURCE_DIR}/contrib/mongoose.c")
TARGET_LINK_LIBRARIES(swirlyd ${fir_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
INSTALL(TARGETS swirlyd DESTINATION bin)
